# game2

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
assets/models/: ninja.fbx
assets/models/GrassPlatform/: grass_platform.mtl
assets/models/spider/textures/: SH3.dds  Spinnen_Bein_tex_COLOR_.dds  haar_detail_NRM.dds
assets/textures/: minecraft_cube.dds
src/: Error.cpp  Error.h  Gfx.cpp  Gfx.h  Global.cpp  Global.h  Window.cpp  Window.h  debug.cpp  debug.h  init.h  main.cpp  util.cpp  util.h
src/Gfx/: Buffer.cpp  Buffer.h  Buffers.h  Camera.cpp  Camera.h  ComputeShader.cpp  ComputeShader.h  ConstantBuffer.cpp  ConstantBuffer.h  DepthBuffer.cpp  DepthStencil.cpp  DepthStencil.h  Gfx.cpp  Gfx.h  IndexBuffer.cpp  IndexBuffer.h  InstanceBuffer.h  PixelShader.cpp  PixelShader.h  Shader.cpp  Shader.h  ShadowMap.cpp  StaticBuffer.cpp  StaticBuffer.h  StructuredBuffer.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.cpp  VertexShader.h  Vertices.h
src/Gfx/shaders/: cs_skybox.hlsl  directional_light.hlsl  ps.hlsl  ps_skybox.hlsl  ps_tex.hlsl  vs.cso  vs.hlsl  vs_shadow_map.hlsl  vs_skybox.hlsl  vs_tex.hlsl  vs_tex_shadow_map.hlsl
src/game/: Camera.cpp  Camera.h  Character.cpp  Character.h  Clock.cpp  Clock.h  CollisionSystem.cpp  CollisionSystem.h  Controller.cpp  Controller.h  Skybox.cpp  Skybox.h
src/input/: Input.cpp  Input.h
src/models/: Animations.cpp  Animations.h  Bone.h  Cube.cpp  Cube.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  TextureMaterial.h
